タイトルを修正した

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <!-- javascript file -->
     <script src=../js/script.js></script>
-    <title>api kadai aaaa</title>
+    <title>webAPI-app</title>
   </head>
   <body>
     hello
