--- a/html/index.html
+++ b/html/index.html
@@ -2,14 +2,18 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- css file -->
     <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <!-- javascript file -->
-    <script src=../js/script.js></script>
+
     <title>webAPI-app</title>
   </head>
   <body>
     hello
+
+    <!-- javascript file -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src=../js/script.js></script>
   </body>
 </html>
