--- a/html/index.html
+++ b/html/index.html
@@ -10,8 +10,7 @@
     <title>webAPI-app</title>
   </head>
   <body>
-    hello
-
+    <div id="gallery"></div>
     <!-- javascript file -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src=../js/script.js></script>
