階層を整理した

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,12 @@
     <title>webAPI-app</title>
   </head>
   <body>
-    <div id="gallery"></div>
+    <div  class="wrapper">
+      
+      <p class="head">Instagram</p>
+      <div id="gallery" class='instagram-gallery'></div>
+
+    </div>
     <!-- javascript file -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src=../js/script.js></script>
