--- a/html/index.html
+++ b/html/index.html
@@ -11,13 +11,14 @@
   </head>
   <body>
     <div  class="wrapper">
-      
+
       <p class="head">Instagram</p>
       <div id="gallery" class='instagram-gallery'></div>
 
     </div>
     <!-- javascript file -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src=../js/accesstoken.js></script>
     <script src=../js/script.js></script>
   </body>
 </html>
