サイトのレイアウトを調整した

--- a/html/index.html
+++ b/html/index.html
@@ -12,10 +12,10 @@
   <body>
     <div  class="wrapper">
       <p class="head">Youtube</p>
-      <div id="movie" class='youtube-movie'></div>
+      <div id="movie" class="youtube-movie"></div>
 
       <p class="head">Instagram</p>
-      <div id="gallery" class='instagram-gallery'></div>
+      <div id="gallery" class="instagram-gallery"></div>
 
     </div>
     <!-- javascript file -->
