[add]コピーライトを追加

--- a/html/index.html
+++ b/html/index.html
@@ -16,8 +16,10 @@
 
       <p class="head">Instagram</p>
       <div id="gallery" class="instagram-gallery"></div>
-
+      
+      <p id="copyRight" class="copyRightText"></p>
     </div>
+
     <!-- javascript file -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src=../js/accesstoken.js></script>
