[add]ヘッダーを追加

--- a/html/index.html
+++ b/html/index.html
@@ -11,12 +11,21 @@
   </head>
   <body>
     <div  class="wrapper">
+      <header>
+        <div class="header-content">
+        <img class="icon" src="../img/icon.svg" alt="icon">
+        <div>
+        <p class="siteName">Enome Gallery</p>
+      </div>
+        <p class="introduction">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
+      </div>
+      </header>
       <p class="head">Youtube</p>
       <div id="movie" class="youtube-movie"></div>
 
       <p class="head">Instagram</p>
       <div id="gallery" class="instagram-gallery"></div>
-      
+
       <p id="copyRight" class="copyRightText"></p>
     </div>
 
