[add] ボタンを追加

--- a/html/index.html
+++ b/html/index.html
@@ -22,9 +22,15 @@
       </header>
       <p class="head">Youtube</p>
       <div id="movie" class="youtube-movie"></div>
+      <div class="btn">
+        <div id="yt-btn" class="btn-content">Youtube</div>
+      </div>
 
       <p class="head">Instagram</p>
       <div id="gallery" class="instagram-gallery"></div>
+      <div class="btn">
+        <div id="inst-btn" class="btn-content">Instagram</div>
+      </div>
 
       <p id="copyRight" class="copyRightText"></p>
     </div>
