--- a/html/index.html
+++ b/html/index.html
@@ -22,15 +22,11 @@
       </header>
       <p class="head">Youtube</p>
       <div id="movie" class="youtube-movie"></div>
-      <div class="btn">
-        <div id="yt-btn" class="btn-content">Youtube</div>
-      </div>
+      <div id="yt-btn" class="btn"></div>
 
       <p class="head">Instagram</p>
       <div id="gallery" class="instagram-gallery"></div>
-      <div class="btn">
-        <div id="inst-btn" class="btn-content">Instagram</div>
-      </div>
+      <div id="inst-btn" class="btn"></div>
 
       <p id="copyRight" class="copyRightText"></p>
     </div>
