タイトルを変更

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <!-- css file -->
     <link rel="stylesheet" type="text/css" href="../css/main.css">
 
-    <title>webAPI-app</title>
+    <title>Enome Gallery</title>
   </head>
   <body>
     <div  class="wrapper">
@@ -20,6 +20,7 @@
         <p class="introduction">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
       </div>
       </header>
+      
       <p class="head">Youtube</p>
       <div id="movie" class="youtube-movie"></div>
       <div id="yt-btn" class="btn"></div>
