文章を変更

--- a/html/index.html
+++ b/html/index.html
@@ -17,10 +17,12 @@
         <div>
         <p class="siteName">Enome Gallery</p>
       </div>
-        <p class="introduction">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
+        <p class="introduction">
+          最新のYoutubeへ投稿した動画<br>
+          Instagramの画像を紹介しています</p>
       </div>
       </header>
-      
+
       <p class="head">Youtube</p>
       <div id="movie" class="youtube-movie"></div>
       <div id="yt-btn" class="btn"></div>
